Fixed sorting system invisibility

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -102,10 +102,10 @@ textarea {
 
 }
 
-
 /* hidden books */
-.hidden {
+#books div.hide {
     display: none;
+    border: 1px solid red;
 }
 
 
